test/valid/66358_skip_right_side/skip_right_side.mag
-- Author: 66358, Gustavo Cardoso

fun main (_) : Unit -> Unit =
  var x : Int = 0;
  var _ : Bool = true || (x = x + 1) == 1;
  print(x)