test/invalid-semantics/66358_int_plus_bool/int-plus-bool.mag
-- Author: 66358, Gustavo Cardoso

fun main (_) : Unit -> Unit = 8 + true